<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".screens.ShoeDetailFragment">

    <data>
        <variable
            name="Shoe"
            type="com.udacity.shoestore.models.Shoe"/>
    </data>
    <!--  In shoe detail fragments we have multiple views in different positions Same constraint layout is better than the linear layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:text="@string/shoe_name_string"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:inputType="textPersonName"
            android:text="@={Shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_txtview"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_txtview" />

        <TextView
            android:id="@+id/company_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:text="@string/shoe_company_string"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_txtview" />

        <EditText
            android:id="@+id/company_editTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/company_hintSreing"
            android:inputType="textPersonName"
            android:text="@={Shoe.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_txtview"
            app:layout_constraintStart_toEndOf="@+id/company_txtview" />

        <TextView
            android:id="@+id/shoe_size_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_size_string"

            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_txtview" />

        <EditText
            android:id="@+id/size_editTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/size_hintSreing"
            android:inputType="numberDecimal"
            android:text="@{String.valueOf(Shoe.size)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_txtview"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_txtview" />

        <TextView
            android:id="@+id/shoe_description_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_description_string"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_txtview" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Description_hintSreing"
            android:inputType="textMultiLine"
            android:text="@={Shoe.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_txtview"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_txtview" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_btn_string"
            android:textColor="#31C537"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.755"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.776" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:shadowColor="#F44336"
            android:text="@string/cancel_btn_string"
            android:textColor="#F44336"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_btn"
            app:layout_constraintEnd_toStartOf="@+id/add_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>