<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".screens.WelcomeFragment">
    <!--    It's simple layout consist of 2 text view and 1 Button There's no need to use Constraint layout.
     Using Linear layout in this situation is simpler and good for performance.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/welcome_textview"
            android:textAlignment="center"
            android:textColor="#1A551D"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"

            android:layout_height="293dp">

            <TextView
                android:id="@+id/policy_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/policies"
                android:textAlignment="center"
                android:textSize="14sp" />
        </ScrollView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/wlecome_screen_btn" />
    </LinearLayout>

</layout>